--- a/work-scheduler-web/src/main/webapp/resources/css/header.css
+++ b/work-scheduler-web/src/main/webapp/resources/css/header.css
@@ -10,6 +10,7 @@ header{
     width: 100%;
     top: 0px;
     z-index: 99999999999999;
+    box-shadow: -5px 13px 30px -13px rgba(0,0,0,0.53);
 }
 
 #userLogin{
